Fixed banner wrap shadow, added links to menus

--- a/source/assets/stylesheets/global.scss
+++ b/source/assets/stylesheets/global.scss
@@ -387,7 +387,7 @@ body {
 
     /* appearance */
     background: transparent;
-    box-shadow: inherit;
+
     border-radius: $wrap-corner;
 
     /* avoid the great collapse */
